--- a/templates/scoreboard/hud.html
+++ b/templates/scoreboard/hud.html
@@ -21,6 +21,7 @@
 				<div class="header_links">
 					<div class="private_stuff">
 						<h2><a href="/">Scoreboard</a></h2>
+						<h2><a href="/validator">Challenge Validator</a></h2>
 						<h2><a href="/hud/transactions">Team Transactions</a></h2>
 
 						{% if is_admin %}
