scoreboard work and challenge submission

--- a/templates/validator/index.html
+++ b/templates/validator/index.html
@@ -53,7 +53,7 @@
 		<marquee behavior="scroll" direction="">
 			<h1>SoTB2023 BYOCTF Challenge Validator</h1>
 		</marquee>
-		<h3>checkout the new <a href="/create">byoctf challenge creator</a></h3>
+		<h3>Checkout the new <a href="/create">byoctf challenge creator</a><br>or go back to the <a href='/'>scoreboard</a></h3>
 		<form>
 			<textarea name="toml" id="toml" cols="60" rows="20"
 				placeholder="Paste your challenge toml here..."></textarea>
