Update link for new location of validator

--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -39,7 +39,7 @@
             <h1 class="display-4">SOTB2023 BYOCTF Challenge Builder</h1>
             <p class="lead">
                 This is a simple tool to help you create the toml file for byoctf.
-                <a href="/">Validate your challenge here!</a><br>
+                <a href="/validator">Validate your challenge here!</a><br>
                 Need help understanding what makes a good challenge? See <a href="https://github.com/ShyftXero/byoctf_discord#notes-or-guidance-for-developing-challenges">notes or guidance for developing challenges</a>
             </p>
         </div>
