--- a/templates/scoreboard/challenges.html
+++ b/templates/scoreboard/challenges.html
@@ -37,6 +37,19 @@
 						<h2><a href="/transactions">Public Transactions</a></h2>
 					</div>
 				</div>
+
+				<div class='flag_submission'>
+					<form>
+						<input name="flag" placeholder="FLAG{here}"/>
+						<button 
+						  type="submit" 
+						  hx-post="/sub"
+						  hx-target="#result">
+						  Submit Flag
+						</button>
+					</form>
+					<div id='result'></div>
+				</div>
 	
 		<!-- <h1>User Challenges and Hints</h1> -->
 		<div class="container">
