adding hint purchases to web

--- a/static/style.css
+++ b/static/style.css
@@ -318,5 +318,6 @@ table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sor
 }
 
 button {
-
+  font-family: pixeland;
+  font-size: xx-large;
 }
