--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -39,7 +39,7 @@
             <h1 class="display-4">SOTB2023 BYOCTF Challenge Builder</h1>
             <p class="lead">
                 This is a simple tool to help you create the toml file for byoctf.
-                <a href="/validator">Validate your challenge here!</a><br>
+                <a href="/validator">Validate and submit your challenge here!</a><br>
                 Need help understanding what makes a good challenge? See <a href="https://github.com/ShyftXero/byoctf_discord#notes-or-guidance-for-developing-challenges">notes or guidance for developing challenges</a>
             </p>
         </div>
@@ -99,10 +99,10 @@
                     <button id='build_btn'  py-click="build_challenge" class="py-button">Build</button>
                     <button id='validate_btn'  py-click="validate_challenge" class="py-button">Validate</button>
                     <button id='download_btn'  py-click="download_challenge" class="py-button">Download Challenge File</button>
-                </p>
-                
-            
+                    
+                </p>            
             </form>
+            <h2><a href="/validator">Submit your challenge here!</a></h2>
         </div>
         
         Validation Status :
