Make naming more generic to just BYOCTF

--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -36,7 +36,7 @@
     
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">SOTB2023 BYOCTF Challenge Builder</h1>
+            <h1 class="display-4">BYOCTF Challenge Builder</h1>
             <p class="lead">
                 This is a simple tool to help you create the toml file for byoctf.
                 <a href="/validator">Validate and submit your challenge here!</a><br>
