--- a/templates/scoreboard/hud.html
+++ b/templates/scoreboard/hud.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/glitch.css">
 	
 
-    <title>SOTB HUD</title>
+    <title>BYOCTF HUD</title>
         <script src="https://unpkg.com/htmx.org@1.8.0"
         integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc"
         crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
 </head>
 <body>
         <div class='container' hx-get="/hud" hx-trigger="every 2m" hx-swap="outerHTML">
-				<h1>SOTB PLAYER HUD</h1>
+				<h1>BYOCTF PLAYER HUD</h1>
 				 
 				<div class="header_links">
 					<div class="private_stuff">
