--- a/templates/scoreboard/public_transactions.html
+++ b/templates/scoreboard/public_transactions.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/static/style.css">
 
-    <title>SOTB HUD</title>
+    <title>BYOCTF HUD</title>
         <script src="https://unpkg.com/htmx.org@1.8.0"
         integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc"
         crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 </head>
 <body>
         <div class='container' hx-get="/transactions" hx-trigger="every 1m" hx-swap="outerHTML">
-			<a href="/hud"><h1>SOTB PLAYER HUD</h1></a>
+			<a href="/hud"><h1>BYOCTF PLAYER HUD</h1></a>
 				
 				<div class="header_links">
 					<div class="private_stuff">
