--- a/templates/validator/index.html
+++ b/templates/validator/index.html
@@ -51,7 +51,7 @@
 <body>
 	<div class="w-75 p-3">
 		<marquee behavior="scroll" direction="">
-			<h1>SoTB2023 BYOCTF Challenge Validator</h1>
+			<h1>BYOCTF Challenge Validator</h1>
 		</marquee>
 		<h3>Checkout the new <a href="/create">byoctf challenge creator</a><br>or go back to the <a href='/'>scoreboard</a></h3>
 		<form>
