--- a/templates/scoreboard/index.html
+++ b/templates/scoreboard/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>SOTB2023 Scoreboard</title>
+	<title>BYOCTF Scoreboard</title>
 	<script src="https://unpkg.com/htmx.org@1.8.0"
 		integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc"
 		crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
 		<div class="glitch-wrapper">
 			<marquee  direction="down" width="100%" height="150" behavior="alternate">
 				<marquee behavior="alternate">
-					<div class="glitch header" data-glitch="SOTB2023 SCOREBOARD" ><a href="/hud">SOTB2023 SCOREBOARD</a></div>
+					<div class="glitch header" data-glitch="BYOCTF SCOREBOARD" ><a href="/hud">BYOCTF SCOREBOARD</a></div>
 				</marquee>
 			</marquee>
 		</div>
